# petshop-C

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  teste.c
data/: consultas.txt  pedidos.txt
include/: consulta.h  servico.h  util.h
src/: consulta.c  servico.c
